<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myCoordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SameBrand">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:id="@+id/text_sameBrand_heading"
            android:background="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/text_sameBrand_heading"/>

        />


        <EditText android:id="@+id/edit_sameBrand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/edit_sameBrand" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="showSameBrand"
            android:text="@string/button_sameBrand" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView android:id="@+id/text_sameWatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_message" />
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>