<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myCoordinatorLayout"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoveActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:id="@+id/text_remove_heading"
            android:background="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:text="@string/text_remove_heading"/>

        />


        <EditText android:id="@+id/edit_remove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/edit_remove" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="removeWatch"
            android:text="@string/button_remove" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>